<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">respeak</string>
    <string name="hint_login">Enter your phone number</string>
    <string name="invalid_phone_number_toast">Please enter a valid phone number.</string>
    <string name="thank_you_toast">Thank you for your submission! You can begin respeaking now!</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Log In</string>
    <string name="first_time_on_respeak">First time on respeak?</string>
    <string name="requestor">Requestor:</string>
    <string name="requestor_name">CGNet Swara</string>
    <string name="max_reward">Max Reward:</string>
    <string name="amount_earned">Amount Earned:</string>
    <string name="date_submitted">Date Submitted:</string>
    <string name="max_reward_amount">10 rupees</string>
    <string name="current_recording">Current Recording:</string>
    <string name="current_recording_selected">No file currently selected</string>
    <string name="image_description">CGNet Swara</string>
    <string name="play">Play</string>
    <string name="choose_file">Choose file from Dropbox</string>
    <string name="pause">pause</string>
    <string name="listen_again">listen again</string>
    <string name="respeak">respeak</string>
    <string name="record">record</string>
    <string name="done">done</string>
    <string name="sounds_good">Sounds good?</string>
    <string name="no_record_again">no, record again</string>
    <string name="yes_submit">yes, submit</string>
    <string name="record_again">Record Again</string>
    <string name="submit">Submit</string>
    <string name="link">Link:</string>
    <string name="your_recording">Your Recording:</string>
    <string name="original_recording">Original Recording:</string>
    <string name="thank_you">Thank you for your submission!</string>
    <string name="thank_you_details">All payments will be awarded based on the perecentage accuracy of your speech.</string>
    <string name="view_payment_scale"><u>View the payment scale.</u></string>
    <string name="payment_scale">payment scale</string>
    <string name="accuracy">accuracy</string>
    <string name="payment">payment</string>
    <string name="high_accuracy">80% +</string>
    <string name="medium_accuracy">50% - 79%</string>
    <string name="low_accuracy">49% and below</string>
    <string name="high_payment">100%</string>
    <string name="medium_payment">50%</string>
    <string name="low_payment">0%</string>
    <string name="your_current_accuracy_rate">Your current accuracy rate is:</string>
    <string name="current_accuracy">0%</string>
    <string name="last_updated">Last updated:</string>
    <string name="date">TODAY\'S DATE</string>
    <string name="sms_update">An update of your accuracy and payment status will be sent via SMS within two business days.</string>
    <string name="do_more_respeaks">Do more respeaks</string>
    <string name="view_account_balance">View account balance</string>
    <string name="settings">Settings</string>
    <string name="account_history">Account History</string>
    <string name="welcome">Welcome!</string>
    <string name="are_you_sure">Are you sure you are ready to submit?</string>
    <string name="training_dialog_submission">Once you submit, you cannot perform training again.</string>
    <string name="training_dialog">Let\'s start training Respeak to understand your voice. Please record yourself reading the following passage out loud. \n\nBe sure to read the entire passage and speak as naturally as possible. This task will take approximately 10 minutes.</string>
    <string name="balance_and_history">balance and history</string>
    <string name="last_earning">Earnings since last top-up:</string>
    <string name="last_earning_amount">\u20B90</string>
    <string name="next_earning">Amount needed till next top-up:</string>
    <string name="next_earning_amount">\u20B90</string>
    <string name="total_earning">Total earnings received:</string>
    <string name="total_earning_amount">\u20B90</string>
    <string name="top_ups_will_be_awarded">*Top-ups will be awarded after every \u20B9100 earned</string>
    <string name="pref_user_settings">User Settings</string>
    <string name="pref_phone_number">Phone Number</string>
    <string name="pref_phone_number_summ">Enter your phone number</string>
    <string name="pref_full_name">Full Name</string>
    <string name="pref_full_name_summ">Enter your name</string>
    <string name="image_description_recorder">Recorder</string>
    <string name="image_description_record_button">Press to record</string>
    <string name="image_description_done_button">Press if you are done recording</string>
    <string name="title_activity_listen">listen</string>
    <string name="title_activity_record">record</string>
    <string name="title_activity_thank_you">thank you</string>
    <string name="title_activity_training">training</string>
    <string name="title_activity_pay_scale">pay scale</string>

    <color name="white">#FFFFFF</color>
    <color name="light_blue">#00B8E6</color>
    <color name="gold">#E6B800</color>
    <color name="dark_gray">#2E2E2B</color>
    <color name="light_gray">#C1C1AF</color>
    <color name="lighter_gray">#F6F6F6</color>
    <color name="red">#E60000</color>
    <color name="light_red_background">#FFCCB2</color>
    <color name="dark_red">#CC0000</color>
    <color name="green">#00E600</color>

    <string name="title_activity_account_balance_details">AccountBalanceDetailsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings">SettingsActivity</string>

</resources>