<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    tools:context="com.uw.ictd.respeak.ListenActivity" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp" >

        <TableRow>
            
            <TextView
                android:layout_weight="1"
                android:text="@string/requestor" />

            <TextView
                android:id="@+id/requestorName"
                android:layout_weight="1"
                android:text="@string/requestor_name" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_weight="1"
                android:text="@string/max_reward" />

            <TextView
                android:id="@+id/maxRewardAmount"
                android:layout_weight="1"
                android:text="@string/max_reward_amount" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/chooserButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/choose_file" />

    <ImageView
        android:id="@+id/requestorImage"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:contentDescription="@string/image_description"
        android:paddingTop="5dp"
        android:src="@drawable/requestor_image" />

    <SeekBar
        android:id="@+id/audioProgressBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/play" />

    <Button
        android:id="@+id/listenAgainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="25dp"
        android:text="@string/listen_again" />

    <Button
        android:id="@+id/respeakButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/respeak" />

</LinearLayout>