<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.uw.ictd.respeak.PayScaleActivity" >

    <TextView
        style="@style/GoldTitle"
        android:text="@string/payment_scale" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow>

            <TextView
                style="@style/TableText"
                android:layout_weight="1"
                android:text="@string/accuracy"
                android:textStyle="bold"
                android:textColor="@color/gold" />

            <TextView
                style="@style/TableText"
                android:layout_weight="1"
                android:text="@string/payment"
                android:textStyle="bold"
                android:textColor="@color/gold" />
        </TableRow>

        <TableRow>

            <TextView
                style="@style/TableText"
                android:layout_weight="1"
                android:background="@color/green"
                android:text="@string/high_accuracy" />

            <TextView
                style="@style/TableText"
                android:layout_weight="1"
                android:background="@color/light_gray"
                android:text="@string/high_payment" />
        </TableRow>

        <TableRow>

            <TextView
                style="@style/TableText"
                android:layout_weight="1"
                android:background="@color/gold"
                android:text="@string/medium_accuracy" />

            <TextView
                style="@style/TableText"
                android:layout_weight="1"
                android:background="@color/light_gray"
                android:text="@string/medium_payment" />
        </TableRow>

        <TableRow>

            <TextView
                style="@style/TableText"
                android:layout_weight="1"
                android:background="@color/dark_red"
                android:text="@string/low_accuracy" />

            <TextView
                style="@style/TableText"
                android:layout_weight="1"
                android:background="@color/light_gray"
                android:text="@string/low_payment" />
        </TableRow>
    </TableLayout>

</LinearLayout>