<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    tools:context=".SubmissionConfirmationActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="30dp"
        android:text="@string/thank_you"
        android:textColor="@color/gold"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="30dp"
        android:text="@string/thank_you_details"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/viewPayScaleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="center"
        android:text="@string/view_payment_scale"
        android:textColor="@color/light_blue"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sms_update"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/moreRespeaksButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/do_more_respeaks" />

        <Button
            android:id="@+id/viewAccountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_account_balance" />
    </LinearLayout>
</LinearLayout>