<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/trainingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lighter_gray"
        android:maxLines="14"
        android:scrollbars="vertical"
        android:textSize="20sp" />

    <!-- Recording Buttons -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="horizontal"
        android:paddingTop="20dp" >

        <ImageButton
            android:id="@+id/recordImageButtonTrain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/record"
            android:contentDescription="@string/image_description_record_button" />

        <Button
            android:id="@+id/recordButtonTrain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_vertical"
            android:text="@string/record"
            android:textColor="@color/light_blue" />

        <ImageButton
            android:id="@+id/doneImageButtonTrain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/done_black"
            android:contentDescription="@string/image_description_done_button" />

        <Button
            android:id="@+id/doneButtonTrain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_vertical"
            android:text="@string/done"
            android:textColor="@color/light_blue" />
    </LinearLayout>

    <!-- Playback Buttons -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/yourRecording"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:gravity="top"
            android:text="@string/your_recording"
            android:textColor="@color/light_blue"
            android:textStyle="bold" />

        <Button
            android:id="@+id/recordAgainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:gravity="top"
            android:background="@null"
            android:text="@string/record_again"
            android:textColor="@color/red"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:background="@null"
            android:text="@string/submit"
            android:textColor="@color/green"
            android:textSize="14sp"
            android:textStyle="bold" />
            
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/audioCurrentDurationTraining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:text="0:00"
            android:textColor="@color/gold"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/audioProgressBarTraining"
            android:layout_width="230dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/audioTotalDurationTraining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:text="0:00"
            android:textColor="@color/gold"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/playButtonTraining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/play_button_selector" />

</LinearLayout>