<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteBackground"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.uw.ictd.respeak.TrainingActivity" >

    <TextView
        android:id="@+id/trainingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lighter_gray"
        android:maxLines="15"
        android:scrollbars="vertical"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="horizontal"
        android:paddingTop="20dp" >

        <ImageButton
            android:id="@+id/recordImageButtonTrain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/record"
            android:contentDescription="@string/image_description_record_button" />

        <Button
            android:id="@+id/recordButtonTrain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_vertical"
            android:text="@string/record"
            android:textColor="@color/light_blue" />

        <ImageButton
            android:id="@+id/doneImageButtonTrain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/done_black"
            android:contentDescription="@string/image_description_done_button" />

        <Button
            android:id="@+id/doneButtonTrain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_vertical"
            android:text="@string/done"
            android:textColor="@color/light_blue" />
    </LinearLayout>

</LinearLayout>